--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,8 @@ spring:
 #        native:
 #          search-locations: "classpath:/config"
   cloud:
+    bus:
+      enabled: false
     config:
       server:
         git:
@@ -32,7 +34,18 @@ spring:
 #encrypt:
 #  key: "89YUHE45WmjkA868RE"
 management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
   endpoints:
     web:
       exposure:
         include: "*"
+  health:
+    rabbit:
+      enabled: false
+    readinessstate:
+      enabled: true
+    livenessstate:
+      enabled: true
